# topdown-bevy

./: .gitignore  .gitmodules  Cargo.toml  hello_world.tiled-project  hello_world.tiled-session
assets/: config.ron  tiled_types.json  tilemap.tmx
assets/data/: enemy.ron  level.map.ron  map.txt  player.ron  tiled_types.json
assets/maps/: tilemap.tmx
assets/shaders/: README.md  custom_material.wgsl  fullscreen_effect.wgsl
src/: core.rs  effects.rs  entities.rs  events.rs  input.rs  loading.rs  main.rs  material.rs  menu.rs  pause_menu.rs  physics.rs  player.rs  render.rs  state.rs  ui.rs  world.rs  z_layers.rs
src/core/: camera.rs  input.rs  state.rs  utils.rs
src/entities/: enemy.rs  interactables.rs  map.rs  mod.rs  player.rs
src/entities/enemy/: states.rs
src/entities/enemy/states/: chase.rs  idle.rs  patrol.rs
src/entities/interactables/: chest.rs  coin.rs  components.rs  door.rs  events.rs  light.rs  mod.rs  systems.rs
src/entities/interactables/coin/: config.rs  mod.rs
src/entities/player/: components.rs  config.rs  mod.rs  plugin.rs  states.rs  systems.rs
src/entities/player/states/: active.rs  dashing.rs  idle.rs  inactive.rs  mod.rs  running.rs  walking.rs
src/render/: y_sort.rs  z_layers.rs
src/states/: active.rs
src/ui/: loading.rs  menu.rs  pause_menu.rs
