[package]
name = "bevy-topdown"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["wayland"] }
bevy_asset_loader = { version = "0.25", features = ["2d"] }
bevy_ecs_tilemap = "0.18.1"
leafwing-input-manager = "0.20"
serde = { version = "1.0", features = ["derive"] }
ron = "0.12.1"
avian2d = "0.6.1"
bevy_common_assets = { version = "0.16", features = ["ron"] }
seldom_state = { version = "0.16", features = ["leafwing_input"] }
